[Local Network Detail] Fixed alignment of sidebar widgets

--- a/app/assets/stylesheets/redesign/views/networks/_show.sass
+++ b/app/assets/stylesheets/redesign/views/networks/_show.sass
@@ -17,17 +17,12 @@
 
 .local-network-body-wrapper
   border: 1px solid #eee
-  padding: 2em 0 2em 1em
+  padding: 2em 1em
   overflow: hidden
   +clearfix
 
   .article-sidebar
     width: 30%
-    padding-right: 3%
-    margin-right: 0
-
-    .widget-contact
-      right: -1em
 
   table.table-embedded
     border: 0
